--- a/Sirpple/app.yaml
+++ b/Sirpple/app.yaml
@@ -1,12 +1,13 @@
-application: Sirpple
+application: sirpple
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: false
 
 handlers:
-- url: /favicon\.ico
-  static_files: favicon.ico
-  upload: favicon\.ico
+#- url: /favicon\.ico
+  #static_files: favicon.ico
+  #upload: favicon\.ico
 
-- url: .*
-  script: main.py
+- url: /.*
+  script: main.app
