--- a/Sirpple/configuration/types/types.yaml
+++ b/Sirpple/configuration/types/types.yaml
@@ -4,7 +4,9 @@ GameObject: ReferenceProperty
 
 Integer: IntegerProperty
 
-Method: ReferenceProperty
+GameObjectMethod: ReferenceProperty
+
+WorldMethod: ReferenceProperty
 
 Event: ReferenceProperty
 
