Moved around client side things and created space for GUI initalization

--- a/Sirpple/app.yaml
+++ b/Sirpple/app.yaml
@@ -9,5 +9,11 @@ handlers:
   #static_files: favicon.ico
   #upload: favicon\.ico
 
+- url: /static
+  static_dir: static
+
+- url: /configuration
+  static_dir: configuration
+
 - url: /.*
   script: main.app
