added GameObject constructor as GameObject.init
GAE and our framework disallow the name constructor right now

--- a/Sirpple/configuration/models/models.yaml
+++ b/Sirpple/configuration/models/models.yaml
@@ -15,6 +15,7 @@ Attribute:
 GameObject:
     name: String
     parent_class: GameObject
+    init: GameObjectMethod
     .parent: Project
     type: Integer
 
