--- a/Sirpple/app.yaml
+++ b/Sirpple/app.yaml
@@ -8,6 +8,8 @@ handlers:
 #- url: /favicon\.ico
   #static_files: favicon.ico
   #upload: favicon\.ico
+- url: /jslibs
+  static_dir: jslibs
 
 - url: /.*
   script: main.app
