--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Sirpple/jslibs/limejs"]
-	path = Sirpple/jslibs/limejs
+[submodule "Sirpple/static/jslibs/limejs"]
+	path = Sirpple/static/jslibs/limejs
 	url = https://github.com/digitalfruit/limejs.git
